# sl-statement

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
inc/: sql-statement.hpp
include/: sql-statement.hpp
src/: main.cpp  sql-statement.cpp
